--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-}
 
 .app {
   width: 50%;
@@ -11,4 +6,30 @@
   /* border: 2px solid white; */
   background-color: #1e1b20;
   border-radius: 15px;
+}
+
+@media screen and (max-width: 992px) {
+  .app {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .app {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .app {
+    font-size: 16px;
+    padding: 1em;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .app {
+    font-size: 14px;
+  }
 }
